Fixed webstorm warnings.

--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -16,7 +16,7 @@
                 </button>
 
                 <div class="popup-menu">
-                    <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Cerrar sesión</button>
+                    <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Log out</button>
                 </div>
             </section>
         </section>
