--- a/HTML/templates/company-vacancy-post.html
+++ b/HTML/templates/company-vacancy-post.html
@@ -83,6 +83,6 @@
             </div>
         </section>
 
-        <button type="submit" class="vacancy-submit-btn">Submit offer</button>
+        <button type="submit" class="vacancy-submit-btn" onclick="redirectToJobListingCompany(event, this)">Submit offer</button>
     </form>
 </main>
