--- a/HTML/templates/footer.html
+++ b/HTML/templates/footer.html
@@ -1,13 +1,13 @@
 <section id="footer">
     <div id="footer-container">
-        <p class="info-text">Sobre nosotros</p>
+        <p class="info-text">About us</p>
         <p>Lorem Ipsum</p>
         <p>Lorem Ipsum</p>
 
     </div>
     <div id="footer-container2">
-        <p class="info-text">Contacto</p>
+        <p class="info-text">Contact</p>
         <p>Email: <a href="#">namesurname@gmail.com</a></p>
-        <p>Telf: +34 12345678</p>
+        <p>Number: +34 12345678</p>
     </div>
 </section>
