--- a/HTML/templates/job-seeker-find-jobs-list.html
+++ b/HTML/templates/job-seeker-find-jobs-list.html
@@ -17,10 +17,11 @@
 
         <fieldset>
             <legend>Education</legend>
-            <label for="education-1"><input type="checkbox" name="education" id="education-1" checked> ESO</label>
-            <label for="education-2"><input type="checkbox" name="education" id="education-2" checked> Bachillerato</label>
-            <label for="education-3"><input type="checkbox" name="education" id="education-3" checked> Grado</label>
-            <label for="education-4"><input type="checkbox" name="education" id="education-4" checked> Master</label>
+            <label for="education-1"><input type="checkbox" name="education" id="education-1" checked> Elementary School</label>
+            <label for="education-2"><input type="checkbox" name="education" id="education-2" checked> Middle School</label>
+            <label for="education-3"><input type="checkbox" name="education" id="education-3" checked> High School</label>
+            <label for="education-4"><input type="checkbox" name="education" id="education-4" checked> University</label>
+            <label for="education-4"><input type="checkbox" name="education" id="education-5" checked> Master</label>
         </fieldset>
     </aside>
 
