--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -10,14 +10,14 @@
         </section>
 
         <section class="section-button-job-seeker-button">
-            <img src="/images/user.png" id="imgJobSeeker" alt="Profile Picture">
+            <img src="/images/asps.png" id="imgJobSeeker" alt="Profile Picture">
             <button class="job-seeker-profile-button">
                 <b class="color-name">Name</b><br>email@example.com
             </button>
 
             <div class="popup-menu">
-                <button class="popup-btn" onclick="redirectToJobSeekerProfileJobSeeker(event, this)">Editar perfil</button>
-                <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Cerrar sesión</button>
+                <button class="popup-btn" onclick="redirectToJobSeekerProfileJobSeeker(event, this)">Edit profile</button>
+                <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Log out</button>
             </div>
         </section>
     </section>
