--- a/HTML/templates/job-seeker-profile-view.html
+++ b/HTML/templates/job-seeker-profile-view.html
@@ -3,7 +3,7 @@
   <section class="dashboard-profile" >
     <section class="user-dashboard" >
       <section  class="user-image-dashboard" >
-        <img src="/images/asps.png" class="user-image"></img>
+        <img src="/images/asps.png" class="user-image" alt="user image">
         <h1>Lore ipsum</h1>
       </section>
       <section>
@@ -17,22 +17,26 @@
   <section class="edit-zone">
     <section class="text-area">
       <section>
-        <textarea class="text-user" readonly maxlength="1905" rows="50" cols="150">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-        Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
-       </textarea>
-        <h3>Portfolio</h3>
-        <textarea class="text-user"   rows="10" cols="90" readonly>
-       </textarea>
+          <label>
+                <textarea class="text-user" readonly maxlength="1905" rows="50" cols="150">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
+                </textarea>
+          </label>
+          <h3>Portfolio</h3>
+          <label>
+            <textarea class="text-user"   rows="10" cols="90" readonly>
+            </textarea>
+          </label>
       </section>
 
     </section>
@@ -42,19 +46,27 @@
       </section>
       <section class="text-center" >
         <h4 class ="margin-zero">Contact  method</h4>
-        <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          <label>
+              <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          </label>
       </section>
       <section class="text-center" >
         <h4 class ="margin-zero">Contact  method</h4>
-        <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          <label>
+              <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          </label>
       </section>
       <section class="text-center" >
-        <h4 sclass ="margin-zero">Contact  method</h4>
-        <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+        <h4 class="margin-zero">Contact  method</h4>
+          <label>
+              <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          </label>
       </section>
       <section class="text-center" >
         <h4 class ="margin-zero">Contact  method</h4>
-        <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          <label>
+              <input type="text" value="         lore ipsum"  class="contact-method" readonly>
+          </label>
       </section>
     </section>
   </section>
