--- a/HTML/templates/main-page-header.html
+++ b/HTML/templates/main-page-header.html
@@ -1,7 +1,7 @@
  <header id="main-header">
           <section class="display-section">
             <section  class="display-section">
-              <img src="/images/asps.png" class="login-section">
+              <img src="/images/asps.png" class="login-section" alt="logotype">
             </section>
           </section>
           <section class="display-section">
