--- a/HTML/templates/job-seeker-profile-view.html
+++ b/HTML/templates/job-seeker-profile-view.html
@@ -2,13 +2,16 @@
   <br>
   <section class="dashboard-profile" >
     <section class="user-dashboard" >
-      <section  class="user-image-dashboard" >
-        <img src="/images/asps.png" class="user-image" alt="user image">
-        <h1>Lore ipsum</h1>
-      </section>
-      <section>
-        <button class="ApplyNowVacant"><b>Edit profile</b></button>
-      </section>
+        <section class="user-image-dashboard">
+            <label for="uploadImage">
+                <img id="userImage" src="/images/asps.png" class="user-image" alt="user image">
+            </label>
+            <section class="image-controls">
+                <h1>Lore ipsum</h1>
+                <input type="file" id="uploadImage" accept="image/*" hidden>
+            </section>
+        </section>
+
     </section>
   </section>
   <section id="about-me" >
@@ -34,8 +37,7 @@
           </label>
           <h3>Portfolio</h3>
           <label>
-            <textarea class="text-user"   rows="10" cols="90" readonly>
-            </textarea>
+              <textarea class="text-user portfolio-textarea" placeholder="Enter your portfolio link here" rows="3" cols="90"></textarea>
           </label>
       </section>
 
