--- a/HTML/templates/vacancy-profile-view.html
+++ b/HTML/templates/vacancy-profile-view.html
@@ -2,9 +2,14 @@
     <br>
     <section class="dashboard-profile" >
         <section class="user-dashboard" >
-            <section  class="user-image-dashboard" >
-                <img src="/images/asps.png" class="user-image" alt="user image">
-                <h1>Lore ipsum</h1>
+            <section class="user-image-dashboard">
+                <label for="uploadImage">
+                    <img id="userImage" src="/images/asps.png" class="user-image" alt="user image">
+                </label>
+                <section class="image-controls">
+                    <h1>Lore ipsum</h1>
+                    <input type="file" id="uploadImage" accept="image/*" hidden>
+                </section>
             </section>
             <section>
                 <button class="ApplyNowVacant"><b>Apply now</b></button>
@@ -16,7 +21,7 @@
         <section class="text-area">
             <section>
                 <label>
-                    <textarea class="text-user"  maxlength="1905"  readonly rows="30" cols="120">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
+                    <textarea class="text-user"  maxlength="10000"  readonly rows="50" cols="150">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
                     Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
                     Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.
