--- a/HTML/views/sign-up-job-seeker.html
+++ b/HTML/views/sign-up-job-seeker.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Employment web site">
     <meta name="keywords" content="HTML5, CSS3, JavaScript">
 
-    <title>Sign page</title>
+    <title>JobTray</title>
     <script src="/JS/xlu-include-file.js"></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
