--- a/HTML/templates/company-sign-in.html
+++ b/HTML/templates/company-sign-in.html
@@ -10,14 +10,14 @@
         </div>
 
         <section class="sign-entry-form">
-            <form>
+            <form id="loginFormCompany">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" placeholder="Enter email address" required>
 
                 <label for="password">Password</label>
                 <input type="password" id="password" placeholder="Enter password" required>
 
-                <button type="submit" class="submit-button" onclick="redirectToJobListingCompany(event, this)">Login</button>
+                <button type="submit" class="submit-button" >Login</button>
             </form>
         </section>
 
