--- a/HTML/templates/job-seeker-sign-up.html
+++ b/HTML/templates/job-seeker-sign-up.html
@@ -10,7 +10,7 @@
         </div>
 
         <section class="sign-entry-form">
-            <form>
+            <form id="signup-user">
                 <label for="name">Full name</label>
                 <input type="text" id="name" placeholder="Enter your full name" required>
 
@@ -26,7 +26,7 @@
                 <label for="password-confirm">Confirm Password</label>
                 <input type="password" id="password-confirm" placeholder="Repeat the password" required>
 
-                <button type="submit" class="submit-button" onclick="redirectToFindJobsJobSeeker(event, this)">Sign up</button>
+                <button type="submit" class="submit-button" >Sign up</button>
             </form>
         </section>
 
