--- a/HTML/views/sign-in-job-seeker.html
+++ b/HTML/views/sign-in-job-seeker.html
@@ -7,7 +7,7 @@
 
     <title>JobTray</title>
     <script src="/JS/xlu-include-file.js"></script>
-
+    <script src="/JS/ValidationSignInUser.js"></script>
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/sign-form-style.css">
